fixed carousel height on mobile device
Minimum height now changes to 200px

--- a/resources/css/carousel.css
+++ b/resources/css/carousel.css
@@ -8,7 +8,7 @@ div.carousel {
 }
 
 div.carousel-inner {
-    min-height: 240px;
+    min-height: 200px;
     width: 82%;
     padding: 0;
     margin: 0 auto;
